@@ -17,6 +17,7 @@ Package org.springframework.osgi.service
 Package org.springframework.osgi.web
 * improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
 * fixed problem with OsgiBundleXmlWebApplicationContext publishing null namespaces as OSGi properties
+* DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header
 
 
 Changes in version 1.1.0 M2 (2008-04-29)
